snapshots/DeepSpeech/native_client/kenlm/util/murmur_hash.cc.snap
---
source: tests/common/mod.rs
assertion_line: 49
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 175
kind: unit
spaces:
  - name: util
    start_line: 16
    end_line: 175
    kind: namespace
    spaces:
      - name: MurmurHash64A
        start_line: 26
        end_line: 79
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 3
            total_closures: 0
            average_functions: 3
            average_closures: 0
            total: 3
            average: 3
            functions_min: 3
            functions_max: 3
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 4
            average: 4
            min: 4
            max: 4
          cyclomatic:
            sum: 11
            average: 11
            min: 11
            max: 11
          halstead:
            n1: 31
            N1: 172
            n2: 32
            N2: 103
            length: 275
            estimated_program_length: 313.58
            purity_ratio: 1.14
            vocabulary: 63
            volume: 1643.752
            difficulty: 49.891
            level: 0.02
            effort: 82007.814
            time: 4555.99
            bugs: 0.629
          loc:
            sloc: 54
            ploc: 45
            lloc: 40
            cloc: 0
            blank: 9
            sloc_average: 54
            ploc_average: 45
            lloc_average: 40
            cloc_average: 0
            blank_average: 9
            sloc_min: 54
            sloc_max: 54
            cloc_min: 0
            cloc_max: 0
            ploc_min: 45
            ploc_max: 45
            lloc_min: 40
            lloc_max: 40
            blank_min: 9
            blank_max: 9
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 65.344
            mi_sei: 19.69
            mi_visual_studio: 38.213
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
      - name: MurmurHash64B
        start_line: 84
        end_line: 152
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 3
            total_closures: 0
            average_functions: 3
            average_closures: 0
            total: 3
            average: 3
            functions_min: 3
            functions_max: 3
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 6
            average: 6
            min: 6
            max: 6
          cyclomatic:
            sum: 9
            average: 9
            min: 9
            max: 9
          halstead:
            n1: 31
            N1: 196
            n2: 31
            N2: 138
            length: 334
            estimated_program_length: 307.16
            purity_ratio: 0.92
            vocabulary: 62
            volume: 1988.702
            difficulty: 69
            level: 0.014
            effort: 137220.408
            time: 7623.356
            bugs: 0.887
          loc:
            sloc: 69
            ploc: 58
            lloc: 57
            cloc: 0
            blank: 11
            sloc_average: 69
            ploc_average: 58
            lloc_average: 57
            cloc_average: 0
            blank_average: 11
            sloc_min: 69
            sloc_max: 69
            cloc_min: 0
            cloc_max: 0
            ploc_min: 58
            ploc_max: 58
            lloc_min: 57
            lloc_max: 57
            blank_min: 11
            blank_max: 11
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 60.842
            mi_sei: 12.992
            mi_visual_studio: 35.58
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
      - name: ~
        start_line: 155
        end_line: 169
        kind: namespace
        spaces:
          - name: MurmurHashNativeBackend
            start_line: 160
            end_line: 162
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 3
                total_closures: 0
                average_functions: 3
                average_closures: 0
                total: 3
                average: 3
                functions_min: 3
                functions_max: 3
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 1
                average: 1
                min: 1
                max: 1
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
              halstead:
                n1: 9
                N1: 14
                n2: 6
                N2: 9
                length: 23
                estimated_program_length: 44.039
                purity_ratio: 1.915
                vocabulary: 15
                volume: 89.858
                difficulty: 6.75
                level: 0.148
                effort: 606.545
                time: 33.697
                bugs: 0.024
              loc:
                sloc: 3
                ploc: 3
                lloc: 1
                cloc: 0
                blank: 0
                sloc_average: 3
                ploc_average: 3
                lloc_average: 1
                cloc_average: 0
                blank_average: 0
                sloc_min: 3
                sloc_max: 3
                cloc_min: 0
                cloc_max: 0
                ploc_min: 3
                ploc_max: 3
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 129.582
                mi_sei: 111.348
                mi_visual_studio: 75.779
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
          - name: MurmurHashNativeBackend<4>
            start_line: 163
            end_line: 165
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 3
                total_closures: 0
                average_functions: 3
                average_closures: 0
                total: 3
                average: 3
                functions_min: 3
                functions_max: 3
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 1
                average: 1
                min: 1
                max: 1
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
              halstead:
                n1: 11
                N1: 16
                n2: 7
                N2: 10
                length: 26
                estimated_program_length: 57.705
                purity_ratio: 2.219
                vocabulary: 18
                volume: 108.418
                difficulty: 7.857
                level: 0.127
                effort: 851.856
                time: 47.325
                bugs: 0.03
              loc:
                sloc: 3
                ploc: 3
                lloc: 1
                cloc: 0
                blank: 0
                sloc_average: 3
                ploc_average: 3
                lloc_average: 1
                cloc_average: 0
                blank_average: 0
                sloc_min: 3
                sloc_max: 3
                cloc_min: 0
                cloc_max: 0
                ploc_min: 3
                ploc_max: 3
                lloc_min: 1
                lloc_max: 1
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              mi:
                mi_original: 128.605
                mi_sei: 109.939
                mi_visual_studio: 75.208
              abc:
                assignments: 0
                branches: 0
                conditions: 0
                magnitude: 0
                assignments_average: 0
                branches_average: 0
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 0
                branches_max: 0
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            total_functions: 6
            total_closures: 0
            average_functions: 3
            average_closures: 0
            total: 6
            average: 3
            functions_min: 0
            functions_max: 3
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 2
            average: 1
            min: 0
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 3
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 11
            N1: 35
            n2: 10
            N2: 22
            length: 57
            estimated_program_length: 71.273
            purity_ratio: 1.25
            vocabulary: 21
            volume: 250.362
            difficulty: 12.1
            level: 0.083
            effort: 3029.381
            time: 168.299
            bugs: 0.07
          loc:
            sloc: 15
            ploc: 15
            lloc: 2
            cloc: 0
            blank: 0
            sloc_average: 5
            ploc_average: 5
            lloc_average: 0.667
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 1
            lloc_max: 1
            blank_min: 0
            blank_max: 0
          nom:
            functions: 2
            closures: 0
            functions_average: 0.667
            closures_average: 0
            total: 2
            average: 0.667
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 97.72
            mi_sei: 65.585
            mi_visual_studio: 57.146
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
      - name: MurmurHashNative
        start_line: 171
        end_line: 173
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 3
            total_closures: 0
            average_functions: 3
            average_closures: 0
            total: 3
            average: 3
            functions_min: 3
            functions_max: 3
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 12
            N1: 20
            n2: 6
            N2: 9
            length: 29
            estimated_program_length: 58.529
            purity_ratio: 2.018
            vocabulary: 18
            volume: 120.928
            difficulty: 9
            level: 0.111
            effort: 1088.35
            time: 60.464
            bugs: 0.035
          loc:
            sloc: 3
            ploc: 3
            lloc: 1
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 1
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 1
            lloc_max: 1
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 128.037
            mi_sei: 109.12
            mi_visual_studio: 74.876
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 15
        total_closures: 0
        average_functions: 3
        average_closures: 0
        total: 15
        average: 3
        functions_min: 0
        functions_max: 3
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 5
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 10
        average: 2
        min: 0
        max: 6
      cyclomatic:
        sum: 25
        average: 3.571
        min: 1
        max: 11
      halstead:
        n1: 36
        N1: 424
        n2: 47
        N2: 273
        length: 697
        estimated_program_length: 447.183
        purity_ratio: 0.642
        vocabulary: 83
        volume: 4443.402
        difficulty: 104.553
        level: 0.01
        effort: 464571.911
        time: 25809.551
        bugs: 1.999
      loc:
        sloc: 160
        ploc: 123
        lloc: 100
        cloc: 8
        blank: 30
        sloc_average: 22.857
        ploc_average: 17.571
        lloc_average: 14.286
        cloc_average: 1.143
        blank_average: 4.286
        sloc_min: 3
        sloc_max: 69
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 58
        lloc_min: 1
        lloc_max: 57
        blank_min: 0
        blank_max: 11
      nom:
        functions: 5
        closures: 0
        functions_average: 0.714
        closures_average: 0
        total: 5
        average: 0.714
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 39.356
        mi_sei: 0.6
        mi_visual_studio: 23.015
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 15
    total_closures: 0
    average_functions: 3
    average_closures: 0
    total: 15
    average: 3
    functions_min: 0
    functions_max: 3
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 5
    average: 1
    min: 0
    max: 1
  cognitive:
    sum: 10
    average: 2
    min: 0
    max: 6
  cyclomatic:
    sum: 26
    average: 3.25
    min: 1
    max: 11
  halstead:
    n1: 36
    N1: 424
    n2: 48
    N2: 274
    length: 698
    estimated_program_length: 454.196
    purity_ratio: 0.651
    vocabulary: 84
    volume: 4461.838
    difficulty: 102.75
    level: 0.01
    effort: 458453.809
    time: 25469.656
    bugs: 1.982
  loc:
    sloc: 175
    ploc: 125
    lloc: 100
    cloc: 20
    blank: 32
    sloc_average: 21.875
    ploc_average: 15.625
    lloc_average: 12.5
    cloc_average: 2.5
    blank_average: 4
    sloc_min: 160
    sloc_max: 160
    cloc_min: 8
    cloc_max: 8
    ploc_min: 123
    ploc_max: 123
    lloc_min: 100
    lloc_max: 100
    blank_min: 30
    blank_max: 30
  nom:
    functions: 5
    closures: 0
    functions_average: 0.625
    closures_average: 0
    total: 5
    average: 0.625
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 37.653
    mi_sei: 6.274
    mi_visual_studio: 22.019
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
