snapshots/DeepSpeech/native_client/kenlm/util/murmur_hash.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 18
kind: unit
spaces:
  - name: util
    start_line: 6
    end_line: 16
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 32
        unique_operands: 9
        total_operands: 19
        length: 51
        estimated_program_length: 61.749
        purity_ratio: 1.211
        vocabulary: 19
        volume: 216.644
        difficulty: 10.556
        level: 0.095
        effort: 2286.801
        time: 127.044
        bugs: 0.058
      loc:
        sloc: 11
        ploc: 5
        lloc: 3
        cloc: 4
        blank: 2
        sloc_average: 11
        ploc_average: 5
        lloc_average: 3
        cloc_average: 4
        blank_average: 2
        sloc_min: 11
        sloc_max: 11
        cloc_min: 4
        cloc_max: 4
        ploc_min: 5
        ploc_max: 5
        lloc_min: 3
        lloc_max: 3
        blank_min: 2
        blank_max: 2
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 61
        average: 61
        min: 61
        max: 61
      mi:
        original: 103.957
        sei: 78.514
        visual_studio: 60.794
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 10
    total_operators: 32
    unique_operands: 10
    total_operands: 21
    length: 53
    estimated_program_length: 66.439
    purity_ratio: 1.254
    vocabulary: 20
    volume: 229.062
    difficulty: 10.5
    level: 0.095
    effort: 2405.153
    time: 133.62
    bugs: 0.06
  loc:
    sloc: 18
    ploc: 10
    lloc: 3
    cloc: 6
    blank: 4
    sloc_average: 9
    ploc_average: 5
    lloc_average: 1.5
    cloc_average: 3
    blank_average: 2
    sloc_min: 11
    sloc_max: 18
    cloc_min: 4
    cloc_max: 6
    ploc_min: 5
    ploc_max: 10
    lloc_min: 3
    lloc_max: 3
    blank_min: 2
    blank_max: 4
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 70
    average: 35
    min: 9
    max: 61
  mi:
    original: 95.459
    sei: 85.333
    visual_studio: 55.824
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
