snapshots/DeepSpeech/native_client/kenlm/util/parallel_read.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 16
kind: unit
spaces:
  - name: util
    start_line: 12
    end_line: 14
    kind: namespace
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 13
        unique_operands: 7
        total_operands: 7
        length: 20
        estimated_program_length: 52.871
        purity_ratio: 2.644
        vocabulary: 17
        volume: 81.749
        difficulty: 5
        level: 0.2
        effort: 408.746
        time: 22.708
        bugs: 0.018
      loc:
        sloc: 3
        ploc: 3
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 23
        average: 23
        min: 23
        max: 23
      mi:
        original: 130.073
        sei: 112.057
        visual_studio: 76.066
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 10
    total_operators: 13
    unique_operands: 8
    total_operands: 9
    length: 22
    estimated_program_length: 57.219
    purity_ratio: 2.601
    vocabulary: 18
    volume: 91.738
    difficulty: 5.625
    level: 0.178
    effort: 516.028
    time: 28.668
    bugs: 0.021
  loc:
    sloc: 16
    ploc: 8
    lloc: 1
    cloc: 6
    blank: 4
    sloc_average: 8
    ploc_average: 4
    lloc_average: 0.5
    cloc_average: 3
    blank_average: 2
    sloc_min: 3
    sloc_max: 16
    cloc_min: 0
    cloc_max: 6
    ploc_min: 3
    ploc_max: 8
    lloc_min: 1
    lloc_max: 1
    blank_min: 0
    blank_max: 4
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 32
    average: 16
    min: 9
    max: 23
  mi:
    original: 102.126
    sei: 68.738
    visual_studio: 59.723
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
